--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+/* src/index.css */
+.montserrat-regular {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400; /* Normal weight */
+  font-style: normal;
+}
+
+.montserrat-bold {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700; /* Bold weight */
+  font-style: normal;
+}
+
+/* Example for italic styles */
+.montserrat-italic {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -11,3 +34,4 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
