--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,7 +1,7 @@
 /* src/components/Footer.css */
 
 .footer {
-  background-color: #2d2d2d;
+  background-color: #737373;
   color: #ffffff;
   padding: 48px 16px;
 }
@@ -9,7 +9,6 @@
 .container {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 16px;
 }
 
 .logo {
@@ -22,8 +21,9 @@
 
 .info-item {
   display: flex;
+  font-size: 15px;
   align-items: center;
-  margin-bottom: 8px;
+  margin-bottom: 3px;
 }
 
 .info-icon {
@@ -65,7 +65,7 @@
 
 .social-icon {
   color: #ffffff;
-  font-size: 1.5rem;
+  font-size: 1rem;
   transition: color 0.3s;
 }
 
@@ -73,7 +73,6 @@
   color: #007bff;
 }
 
-.text-center {
+.derechos{
   text-align: center;
-  margin-top: 48px;
 }
