--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 /* Font definitions */
 .montserrat-regular {
   font-family: "Montserrat", sans-serif;
@@ -25,9 +26,7 @@
 /* Global styles */
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -56,18 +55,11 @@ h3 {
 li{
   @apply montserrat-regular;
 }
-
-span{
-  @apply montserrat-bold;
+span {
+  @apply montserrat-regular; /* Aplica un peso de fuente semibold */
 }
+
+
 a{
   @apply montserrat-regular;
-}
-
-
-
-/* Example for code elements */
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
