--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,8 +7,8 @@
 
 /* Contenedor del Navbar */
 .navbar-container {
-  max-width: 1200px;
-  margin: 0 auto;
+  
+  margin: 0 9em;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -40,6 +40,7 @@
   padding: 0.8rem 0;
   transition: color 0.3s ease;
   cursor: pointer; /* Cambia el cursor a pointer */
+
 }
 
 /* Línea de subrayado */
